# OBS-studio-webrtc

plugins/obs-outputs/: AudioDeviceModuleWrapper.cpp  AudioDeviceModuleWrapper.h  CMakeLists.txt  WebRTCStream.cpp  WebRTCStream.h
plugins/websocket-client/: CMakeLists.txt  WebsocketClientImpl.cpp  WebsocketClientImpl.h
